k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${NAME}
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${NAME}
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ${NAME}
    spec:
      containers:
        - image: ${IMAGE}
          imagePullPolicy: IfNotPresent
          name: ${NAME}
          volumeMounts:
            - mountPath: /var/www/html/storage
              name: storage
      restartPolicy: Always
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: ${NAME}-storage
