k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${NAME}
  namespace: apps
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ${NAME}
  type: ClusterIP
