k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${NAME}
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: "nginx-clusterissuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${SUBDOMAIN}budget-tracker.home
      secretName: ${NAME}-tls
  rules:
    - host: ${SUBDOMAIN}budget-tracker.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${NAME}
                port:
                  number: 80
